fixed front page card text spacing

--- a/src/assets/css/guided.css
+++ b/src/assets/css/guided.css
@@ -395,14 +395,16 @@
 }
 
 .guided--text-dataset-card {
+  text-align: center;
   margin: 0px;
   color: black;
   font-weight: 600;
-  font-size: 17px !important;
+  font-size: 14px !important;
   margin-bottom: 2px;
 }
 
 .guided--text-dataset-card-sub {
+  text-align: center;
   margin: 0px;
   color: #999;
   font-weight: 600;
@@ -410,11 +412,11 @@
 }
 
 .guided--dataset-card {
-  width: 250px;
+  width: 300px;
   border: none;
   border-radius: 5px;
   box-shadow: 0px 0px 10px #d5d5d5;
-  margin: 5px;
+  margin: 10px;
   padding: 10px;
 }
 .guided--dataset-card-title {
@@ -431,6 +433,7 @@
 .guided--dataset-card-body {
   display: flex;
   justify-content: space-around;
+  align-items: flex-end;
   flex-wrap: wrap;
   margin-top: 8px;
 }
@@ -439,7 +442,7 @@
   flex-direction: column;
   align-items: center;
   width: 40%;
-  margin: 7px 5px;
+  margin: 9px 5px;
 }
 
 .grow {
@@ -512,45 +515,7 @@
   display: flex;
   flex-direction: column;
 }
-.container {
-  position: relative;
-  width: 50%;
-}
 
-.image {
-  display: block;
-  width: 100%;
-  height: auto;
-}
-
-.overlay {
-  position: absolute;
-  bottom: 100%;
-  left: 0;
-  right: 0;
-  background-color: #008cba;
-  overflow: hidden;
-  width: 100%;
-  height: 0;
-  transition: 0.5s ease;
-}
-
-.container:hover .overlay {
-  bottom: 0;
-  height: 100%;
-}
-
-.text {
-  color: white;
-  font-size: 20px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
 .guided--folder-card-container {
   width: 600px;
   display: flex;
